# 42_python_modules

00/ex0/: ft_hello_garden.py
00/ex1/: ft_plot_area.py
00/ex2/: ft_harvest_total.py
00/ex3/: ft_plant_age.py
00/ex4/: ft_water_reminder.py
00/ex5/: ft_count_harvest_iterative.py  ft_count_harvest_recursive.py
00/ex6/: ft_garden_summary.py
00/ex7/: ft_seed_inventory.py
01/ex0/: ft_garden_intro.py
01/ex1/: ft_garden_data.py
01/ex2/: ft_plant_growth.py
01/ex3/: ft_plant_factory.py
01/ex4/: ft_garden_security.py
01/ex5/: ft_plant_types.py
01/ex6/: ft_garden_analytics.py
02/ex0/: ft_first_exception.py
02/ex1/: ft_different_errors.py
02/ex2/: ft_custom_errors.py
02/ex3/: ft_finally_block.py
02/ex4/: ft_raise_errors.py
02/ex5/: ft_garden_management.py
03/: ft_achievement_tracker.py  ft_analytics_dashboard.py  ft_command_quest.py  ft_coordinate_system.py  ft_inventory_system.py  ft_score_analytics.py
03/ex0/: ft_command_quest.py
03/ex1/: ft_score_analytics.py
03/ex2/: ft_coordinate_system.py
03/ex3/: ft_achievement_tracker.py
03/ex4/: ft_inventory_system.py
03/ex5/: ft_data_stream.py
03/ex6/: ft_analytics_dashboard.py
04/ex0/: ft_ancient_text.py
04/ex1/: ft_archive_creation.py
04/ex2/: ft_stream_management.py
04/ex3/: ft_vault_security.py
04/ex4/: ft_crisis_response.py
05/ex0/: stream_processor.py
05/ex1/: data_stream.py
06/: ft_circular_curse.py  ft_import_transmutation.py  ft_pathway_debate.py  ft_sacred_scroll.py
07/: __init__.py
07/ex0/: Card.py  (+3 more)
08/ex1/: loading.py  pyproject.toml  requirements.txt
(+42 files in other folders)
